Perkin-UAT/force-app/main/default/objects/RFx_Request__c/RFx_Request__c.object-meta.xml
<CustomObject>
    <label>RFx Request</label>
    <nameField>
        <displayFormat>RFx{00000}</displayFormat>
        <label>RFx Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFx Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>