Perkin-UAT/force-app/main/default/objects/RFx_Request__c/fields/APAC_Value_USD__c.field-meta.xml
<CustomField>
    <fullName>APAC_Value_USD__c</fullName>
    <label>APAC Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>