Perkin-UAT/force-app/main/default/objects/RFx_Request__c/fields/Assistance_Needed__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Needed__c</fullName>
    <label>Assistance Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>