Perkin-UAT/force-app/main/default/objects/RFx_Request__c/fields/Box_Link_RFx_Details__c.field-meta.xml
<CustomField>
    <fullName>Box_Link_RFx_Details__c</fullName>
    <label>Box Link (RFx Details)</label>
    <type>Url</type>
</CustomField>