Perkin-UAT/force-app/main/default/objects/RFx_Request__c/fields/Date_Request_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Request_Submitted__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Request Submitted</label>
    <type>Date</type>
</CustomField>