Perkin-UAT/force-app/main/default/objects/RFx_Request__c/fields/Date_Response_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Response_Submitted__c</fullName>
    <label>Date Response Submitted</label>
    <type>Date</type>
</CustomField>