Perkin-UAT/force-app/main/default/objects/RFx_Request__c/fields/Deal_Desk_Comment__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Comment__c</fullName>
    <label>Deal Desk Comment</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>