Perkin-UAT/force-app/main/default/objects/RFx_Request__c/fields/Is_this_a_Global_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Global_Account__c</fullName>
    <label>Is this a Global Account?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>