Perkin-UAT/force-app/main/default/objects/RFx_Request__c/fields/Number_Of_Sites__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Sites__c</fullName>
    <label>Number Of Sites:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>