Perkin-UAT/force-app/main/default/objects/RFx_Request__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>RFx_Form_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>