Perkin-UAT/force-app/main/default/objects/RFx_Request__c/fields/Primary_Language__c.field-meta.xml
<CustomField>
    <fullName>Primary_Language__c</fullName>
    <label>Primary Language</label>
    <length>25</length>
    <type>Text</type>
</CustomField>