Perkin-UAT/force-app/main/default/objects/RFx_Request__c/fields/Reason_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Reason_Assistance__c</fullName>
    <label>Reason Assistance</label>
    <type>TextArea</type>
</CustomField>