Perkin-UAT/force-app/main/default/objects/RFx_Request__c/fields/Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Reason_Other__c</fullName>
    <label>Reason Other</label>
    <type>TextArea</type>
</CustomField>