Perkin-UAT/force-app/main/default/objects/RFx_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RFI</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>RFQ</fullName>
            </value>
            <value>
                <fullName>RFS</fullName>
            </value>
            <value>
                <fullName>Other (Please Specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>