Perkin-UAT/force-app/main/default/objects/RFx_Request__c/fields/Response_Status__c.field-meta.xml
<CustomField>
    <fullName>Response_Status__c</fullName>
    <label>Response Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>