Perkin-UAT/force-app/main/default/objects/RFx_Request__c/fields/RFx_PM_Assigned__c.field-meta.xml
<CustomField>
    <fullName>RFx_PM_Assigned__c</fullName>
    <label>RFx PM Assigned</label>
    <length>100</length>
    <type>Text</type>
</CustomField>