Perkin-UAT/force-app/main/default/objects/RFx_Request__c/fields/Value_of_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Value_of_opportunity__c</fullName>
    <formula>Opportunity_Name__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value of opportunity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>